--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -26,8 +26,8 @@
    padding-top: 5px;
  }
 
- #our-nav a {
-
+ #our-nav a:hover {
+     color: #edf2f4;
  }
  #login {
    text-align: center;
@@ -46,27 +46,32 @@
   padding-top: 2vh;
   padding-bottom: 3vh;
   margin-bottom: 0;
-  background-color: #edf2f4;
+  background-color: black;
+  border: none;
 }
 
 .navbar-brand {
   font-size: 40px;
   font-weight: 500;
+  color: #0fcdf2;
+}
+
+.navbar-brand a:hover {
   color: #edf2f4;
 }
 
 .navbar-default .navbar-brand {
   color: #0fcdf2;
+  padding-top: 20px;
 }
-
-/*.navbar-nav li a {
-
-  color: #0fcdf2;
-}*/
 
 .navbar-default .navbar-nav > li > a {
     font-size: 15px ;
     color: #0fcdf2;
+}
+
+.navbar, .navbar-default, .navbar-static-top {
+  padding-top: 20px;
 }
 
 
@@ -103,4 +108,15 @@
 
 #search-submit {
   margin:10px;
+}
+
+@media only screen and (min-width: 768px) {
+
+  .login-container {
+      position: absolute;
+      top: 250px;
+      background-color: white;
+      opacity: 0.75;
+  }
+
 }
