--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -43,7 +43,7 @@
   <body>
 
     <div class="navbar navbar-default navbar-static-top">
-      <div class="container">
+      <div class="container" id="our-nav">
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collapse">
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
@@ -51,7 +51,7 @@
         </button>
         <a class="navbar-brand" href="#">AmpedUp</a>
         <div class="navbar-collapse collapse navbar-responsive-collapse">
-          <ul class="nav navbar-nav" id="our-nav">
+          <ul class="nav navbar-nav">
 
               <li><%= link_to "About" %></li>
               <li><%= link_to "Contact Us" %></li>
