--- a/app/views/concerts/show.html.erb
+++ b/app/views/concerts/show.html.erb
@@ -13,4 +13,4 @@
 </dl>
 
 <%= link_to 'Carpool', user_events_path(@concert, @carpool, params[:format]), class: 'btn btn-primary' %>
-<%= link_to 'Meetup', user_events_path(@concert, !@carpool, params[:format]), class: 'btn btn-primary' %>
+<%= link_to 'Meetup', user_events_path(params[:format], @concert, !@carpool), class: 'btn btn-primary' %>
