--- a/app/views/messages/_index.html.erb
+++ b/app/views/messages/_index.html.erb
@@ -26,3 +26,51 @@
     <% end %>
   </tbody>
 </table>
+
+<button type="button" class="btn btn-md btn-primary" id="myBtn">Add a post</button>
+
+<div id="user-modal" class="modal fade"></div>
+<!-- Modal -->
+<div class="modal fade" id="myModal" role="dialog">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <button type="button" class="close" data-dismiss="modal">&times;</button>
+      <%#= form_for [params[:id], params[:format] ,@message],  url: {action: "create", controller:"messages"}, html: { multipart: true, class:"form-horizontal user" } do |f| %>
+
+
+
+      <%= form_for @message, url: {controller:'messages', action:'create'}, html: { multipart: true, class:"form-horizontal user" } do |f| %>
+
+
+
+
+
+        <div class="form-group">
+          <%= f.label "Your Message:", :class => 'control-label col-lg-2' %>
+          <div class="col-lg-10">
+            <%= f.text_area :body, class: 'form-control', rows: 10 %>
+
+
+
+
+
+
+
+          </div>
+          <%= f.text_field :user_id, value: params[:id] %>
+
+          <%=f.error_span(:body) %>
+        </div>
+
+        <div class="form-group">
+          <div class="col-lg-offset-2 col-lg-10">
+
+            <%= f.submit "Post", :class => 'btn btn-primary'%>
+
+        </div>
+        </div>
+      <% end %>
+    </div>
+
+  </div>
+</div>
