--- a/app/views/messages/show.html.erb
+++ b/app/views/messages/show.html.erb
@@ -11,7 +11,7 @@
 </dl>
 
 <%= link_to t('.back', :default => t("helpers.links.back")),
-              messages_path, :class => 'btn btn-default'  %>
+              message_path, :class => 'btn btn-default'  %>
 <%= link_to t('.edit', :default => t("helpers.links.edit")),
               edit_message_path(@message), :class => 'btn btn-default' %>
 <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
