--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -13,7 +13,7 @@
     </thead>
     <tbody>
       <% @events.each do |event| %>
-        <tr onclick="location.href='<%= event_path(params[:user_id],event,{"carpool"=>"false"}) %>'">
+        <tr onclick="location.href='<%= event_path(params[:user_id],event.id,{"carpool"=>"false"}) %>'">
           <td><%= event.description %></td>
           <td><%= event.location %></td>
               <% if event.time %>
