--- a/app/views/messages/_index.html.erb
+++ b/app/views/messages/_index.html.erb
@@ -49,15 +49,9 @@
           <%= f.label "Your Message:", :class => 'control-label col-lg-2' %>
           <div class="col-lg-10">
             <%= f.text_area :body, class: 'form-control', rows: 10 %>
-
-
-
-
-
-
-
+            <%= f.text_field :user_id, value: params[:id] %>
+            <%= f.text_field :event_id, value: params[:format] %>
           </div>
-          <%= f.text_field :user_id, value: params[:id] %>
 
           <%=f.error_span(:body) %>
         </div>
