--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -72,7 +72,7 @@
         <%= bootstrap_flash %>
         <%= yield %>
       </div>
-    </div> <!-- /container -->
+    </div>
     <div  class="container-fluid footer col-lg-12">
       <footer>
         <p>&copy; Company 2016</p>
