--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -73,13 +73,11 @@
         <%= yield %>
       </div>
     </div>
-    <div  class="container-fluid footer col-lg-12">
+    <div  class="footer">
       <footer>
-        <p>&copy; Company 2016</p>
+        <p>&copy; AmpedUp 2016</p>
       </footer>
     </div>
-    <hr/>
     <%= params %>
-    <br/>
   </body>
 </html>
