--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -30,3 +30,12 @@
 //
 // Example:
 // @link-color: #ff0000;
+
+
+table table-striped table-hover {
+  color: #9c2c86;
+}
+
+.concert_title .concert_headings {
+  font: #450ecb;
+}
