--- a/app/assets/stylesheets/users.css
+++ b/app/assets/stylesheets/users.css
@@ -2,3 +2,11 @@
   Place all the styles related to the matching controller here.
   They will automatically be included in application.css.
 */
+
+.page-header {
+  text-align: center;
+}
+
+.dl-horizontal {
+  display: inline-block;
+}
