--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,19 +1,26 @@
 <%- model_class = User -%>
 <div class="page-header">
-  <h1><%=t '.title', :default => model_class.model_name.human.titleize %></h1>
+  <h1 class="hello_user"> Hello, <%=@user.name%></h1>
 </div>
 
-<%= image_tag @user.image.url(:medium) %>
+<div class="container-fluid">
+  <div class='row'>
+    <div class="col-md-1"></div>
+      <div class="col-md-0"></div>
+      <div class="profile_pic">
+      <%= image_tag @user.image.url(:medium) %>
+      <dl class="dl-horizontal">
+        <dt><strong><%= model_class.human_attribute_name(:username) %>:</strong></dt>
+        <dd><%= @user.username %></dd>
+        <dt><strong><%= model_class.human_attribute_name(:email) %>:</strong></dt>
+        <dd><%= @user.email %></dd>
+        <br>
+        <dd><%= link_to 'Add Concert', new_user_concert_path(@user), :class => 'btn btn-default' %>
+            <%= link_to 'Edit Profile', edit_user_path(@user), :class => 'btn btn-default' %></dd>
+      </dl>
+      </div>
+    </div>
+  </div>
+</div>
 
-<dl class="dl-horizontal">
-  <dt><strong><%= model_class.human_attribute_name(:name) %>:</strong></dt>
-  <dd><%= @user.name %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:username) %>:</strong></dt>
-  <dd><%= @user.username %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:email) %>:</strong></dt>
-  <dd><%= @user.email %></dd>
-</dl>
-
-<%= link_to 'Add Concert', new_user_concert_path(@user), :class => 'btn btn-default' %>
-<%= link_to 'Edit Profile', edit_user_path(@user), :class => 'btn btn-default' %>
 <%= render 'concerts/index' %>
