--- a/app/assets/stylesheets/concerts.css
+++ b/app/assets/stylesheets/concerts.css
@@ -2,3 +2,17 @@
   Place all the styles related to the matching controller here.
   They will automatically be included in application.css.
 */
+
+.concert-container {
+  width: 500px;
+  margin: 0 auto;
+}
+
+.button-container {
+  text-align: center;
+  padding-bottom: 10px;
+}
+
+dl {
+    margin-left: 75px;
+}
