--- a/app/views/concerts/show.html.erb
+++ b/app/views/concerts/show.html.erb
@@ -3,14 +3,19 @@
   <h1><%=t '.title', :default => model_class.model_name.human.titleize %></h1>
 </div>
 
-<dl class="dl-horizontal">
-  <dt><strong><%= model_class.human_attribute_name(:artist) %>:</strong></dt>
-  <dd><%= @concert.artist %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:venue) %>:</strong></dt>
-  <dd><%= @concert.venue %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:date) %>:</strong></dt>
-  <dd><%= @concert.date.strftime("%A, %b %d at %I %p") %></dd>
-</dl>
+<div class="concert-container">
+  <dl class="dl-horizontal">
+    <dt><strong><%= model_class.human_attribute_name(:artist) %>:</strong></dt>
+    <dd><%= @concert.artist %></dd>
+    <dt><strong><%= model_class.human_attribute_name(:venue) %>:</strong></dt>
+    <dd><%= @concert.venue %></dd>
+    <dt><strong><%= model_class.human_attribute_name(:date) %>:</strong></dt>
+    <dd><%= @concert.date.strftime("%A, %b %d at %I %p") %></dd>
+  </dl>
 
-<%= link_to 'Carpool', user_events_path(@concert, @carpool, params[:format]), class: 'btn btn-primary' %>
-<%= link_to 'Meetup', user_events_path(params[:format], @concert, !@carpool), class: 'btn btn-primary' %>
+  <div class="button-container">
+    <%= link_to 'Carpool', user_events_path(@concert, @carpool, params[:format]), class: 'btn btn-primary' %>
+    <%= link_to 'Meetup', user_events_path(params[:format], @concert, !@carpool), class: 'btn btn-primary' %>
+  </div>
+</div>
+</div>
