Fix footer for real, hopefully, add current concert to events index but still needs styling work, mess with map a little

--- a/app/assets/stylesheets/events.css
+++ b/app/assets/stylesheets/events.css
@@ -3,12 +3,22 @@
   They will automatically be included in application.css.
 */
 
+ h4 {
+   margin-top: 20px;
+  text-align: center;
+ }
+ h5 {
+  margin-top: 50px;
+  text-align: center;
+  }
+
  #map {
    height: 85%;
    width: auto;
  }
 
  #map-container {
+   width: 50%;
    overflow: auto;
    height: 100vh;
    border-radius: 16px 16px;
