--- a/app/views/events/_map.html.erb
+++ b/app/views/events/_map.html.erb
@@ -1,7 +1,5 @@
 
-<br/>
-<h1>MAP</h1>
-<h5>Here are the carpools in your area! If you'd like to carpool, enter your pickup location below.</h5>
+<h5>If you dig a carpool to your gig, enter your pickup location below. Click the button to see the other carpools in your area.</h5>
 <div id='map-container'>
   <div id="floating-panel">
     <button id="drop" onclick="drop()">See Carpools</button>
@@ -27,7 +25,7 @@
   <%= event.get_lng %>
 </div>
 <br/>
-  <% end %>
+<% end %>
 
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA2J6ZL433xkOnMv5zhsr7sQkGg4TYP0Dg&callback=initMap"
 async defer>
