--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,7 +13,7 @@
  *= require_tree .
  *= require_self
  */
-  body, td, p, a {
+  body, td, p, a, li {
    font-family: 'Poppins', sans-serif;
   }
 
@@ -26,7 +26,7 @@
   }
 
  footer {
-   position: absolute;
+   /*position: absolute;*/
    bottom: 0;
    text-align: center;
    padding-top: 15px;
@@ -61,6 +61,21 @@
 
  td i a:hover {
    background-color: none;
+ }
+
+ .concert-li-container {
+   width: 100%;
+   text-align: center;
+ }
+
+ .current-concert ul {
+   list-style: none;
+   display: inline;
+ }
+
+ .current-concert li {
+   float: left;
+   padding-left: 15px;
  }
 
  .table-container {
