--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,7 +1,7 @@
 <%- model_class = Event -%>
 <% unless @hide_carpool_list %>
 
-<div class="current-concert">
+<div class="current-concert text-center">
   <ul>
     <li><h4><%= @concert.artist %></h4></li>
     <li><th><h4><%= @concert.venue %></li>
