--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,4 +1,13 @@
 <%- model_class = Event -%>
+
+<div class="current-concert text-center">
+  <ul>
+    <li><h4><%= @concert.artist %></h4></li>
+    <li><th><h4><%= @concert.venue %></li>
+    <li><h4><%= @concert.date.strftime("%A, %b %d") %></h4></li>
+    </ul>
+  </div>
+  
 <div class="page-header">
   <h1><%=t '.title', :default => model_class.model_name.human.titleize %></h1>
 </div>
