--- a/app/views/messages/_index.html.erb
+++ b/app/views/messages/_index.html.erb
@@ -6,6 +6,7 @@
   <thead>
     <tr>
       <th><%= model_class.human_attribute_name(:body) %></th>
+      <th></th>
     </tr>
   </thead>
   <tbody>
@@ -48,7 +49,7 @@
           <%= f.label "Your Message:", :class => 'control-label col-lg-2' %>
           <div class="col-lg-10">
             <%= f.text_area :body, class: 'form-control', rows: 10 %>
-            <%= f.text_field :user_id, value: params[:id] %>
+            <%= f.text_field :user_id, value: current_user.id %>
             <%= f.text_field :event_id, value: params[:format] %>
           </div>
 
