don't even know anymore

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -76,9 +76,9 @@
     <div class="footer">
       <footer>
         <p>&copy; AmpedUp 2016</p>
+      </footer>
     </div>
     <%= params %>
     <br>
-    <%= current_user.id %>
   </body>
 </html>
