Add new image attribute to concert controlle create

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -76,6 +76,7 @@
     <div class="footer">
       <footer>
         <p>&copy; AmpedUp 2016</p>
+      </footer>
     </div>
     <%= params %>
   </body>
