--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -80,6 +80,9 @@
       </footer>
     </div>
     <%= params %>
+    <% if logged_in? %>
+      <%= current_user.id %>
+    <% end %>
     <br>
   </body>
 </html>
