--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -18,13 +18,15 @@
           <td><%= event.time.strftime("%I:%M%p").downcase %></td>
           <td>
               <%= link_to 'Join', user_messages_path(event, params[:user_id]), class: 'btn btn-default btn-xs'  %>
-              <%= link_to t('.edit', :default => t("helpers.links.edit")),
-                          edit_event_path(event), :class => 'btn btn-default btn-xs' %>
-              <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+              <% if (current_user.id == event.concert.user_id) %>
+                <%= link_to t('.edit', :default => t("helpers.links.edit")),
+                            edit_event_path(event), :class => 'btn btn-default btn-xs' %>
+                <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
                           event_path(event),
                           :method => :delete,
                           :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
                           :class => 'btn btn-xs btn-danger' %>
+              <% end %>
             </td>
           </tr>
 
