--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -62,6 +62,10 @@
    background-color: none;
  }
 
+.logo-pic {
+  float:left;
+}
+
  .concert-li-container {
    width: 100%;
    text-align: center;
@@ -106,6 +110,11 @@
      color: #edf2f4;
  }
 
+ #our-nav {
+   padding-left: 0;
+   margin-left: 0;
+ }
+
  .footer {
    padding: 0;
  }
@@ -122,6 +131,10 @@
   font-size: 40px;
   font-weight: 500;
   color: #0fcdf2;
+}
+
+.navbar > .container .navbar-brand {
+  margin-left: -90px;
 }
 
 .navbar-brand a:hover {
