--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -47,7 +47,7 @@
 
     <div class="navbar navbar-default navbar-static-top">
       <div class="container" id="our-nav">
-        <img src="/assets/wav.png"/ class="logo-pic"/>
+        <img src="http://i.imgur.com/fIjZRMK.png" class="logo-pic"/>
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collapse">
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
