--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -5,7 +5,7 @@
 </div>
 
 <% if params[:carpool] == "false" %>
-  <table class="table table-striped table-hover">
+  <table class="table">
     <thead>
             <th><%= model_class.human_attribute_name(:description) %></th>
             <th><%= model_class.human_attribute_name(:time) %></th>
