--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,23 +1,78 @@
 <%- model_class = User -%>
 <div class="profile_page">
-<div class="page-header">
-  <h1 class="hello_user"> Hello, <%=@user.name%></h1>
+  <div class="page-header">
+    <h1 class="hello_user"> Hello, <%=@user.name%></h1>
+  </div>
+
+  <div class="profile_pic">
+    <%= image_tag @user.image.url(:medium) %>
+  </div>
+
+  <dl class="profile_info">
+    <dt><strong><%= model_class.human_attribute_name(:username) %>:</strong></dt>
+    <dd><%= @user.username %></dd>
+    <dt><strong><%= model_class.human_attribute_name(:email) %>:</strong></dt>
+    <dd><%= @user.email %></dd>
+    <br>
+    <dd><%= link_to 'Add Concert', new_user_concert_path(@user), :class => 'btn btn-default' %>
+        <button type="button" class="btn btn-default" id="myBtn">Edit</button>
+  </dl>
 </div>
 
-<div class="profile_pic">
-<%= image_tag @user.image.url(:medium) %>
-</div>
+<div id="user-modal" class="modal fade"></div>
 
-<dl class="profile_info">
-  <dt><strong><%= model_class.human_attribute_name(:username) %>:</strong></dt>
-  <dd><%= @user.username %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:email) %>:</strong></dt>
-  <dd><%= @user.email %></dd>
-  <br>
-  <dd><%= link_to 'Add Concert', new_user_concert_path(@user), :class => 'btn btn-default' %>
-      <%= link_to 'Edit Profile', edit_user_path(@user), :class => 'btn btn-default' %></dd>
-</dl>
-</div>
+
+<!-- Modal -->
+<div class="modal fade" id="myModal" role="dialog">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <!-- <button type="button" class="close" data-dismiss="modal">&times;</button> -->
+      <%= form_for @user, html: { multipart: true, class:"form-horizontal user" } do |f| %>
+        <div class="form-group">
+          <%= f.label :name, :class => 'control-label col-lg-2' %>
+            <div class="col-lg-10">
+              <%= f.text_field :name, :class => 'form-control' %>
+            </div>
+          <%=f.error_span(:name) %>
+        </div>
+        <div class="form-group">
+          <%= f.label :username, :class => 'control-label col-lg-2' %>
+          <div class="col-lg-10">
+            <%= f.text_field :username, :class => 'form-control' %>
+          </div>
+          <%=f.error_span(:username) %>
+        </div>
+        <div class="form-group">
+          <%= f.label :email, :class => 'control-label col-lg-2' %>
+          <div class="col-lg-10">
+            <%= f.text_field :email, :class => 'form-control' %>
+          </div>
+          <%=f.error_span(:email) %>
+        </div>
+        <div class="form-group">
+          <%= f.label :password, :class => 'control-label col-lg-2' %>
+          <div class="col-lg-10">
+            <%= f.text_field :password, :class => 'form-control', :type => 'password'%>
+          </div>
+          <%=f.error_span(:password) %>
+        </div>
+        <div class="form-group">
+          <%= f.label :Upload_a_profile_image, :class => 'control-label col-lg-2' %>
+          <div class="col-lg-10">
+            <%= f.file_field :image, :class => 'form-control' %>
+          </div>
+          <br>
+          <div class="form-group">
+            <div class="col-lg-offset-2 col-lg-10">
+              <%= f.submit nil, :class => 'btn btn-primary'%>
+              <%= link_to t('.cancel', :default => t("helpers.links.cancel")),
+              login_path, :class => 'btn btn-default', "data-dismiss" => "modal" %>
+            </div>
+          </div>
+        </div>
+      <% end %>
     </div>
+  </div>
+</div>
 
 <%= render 'concerts/index' %>
