--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -54,6 +54,50 @@
     </tbody>
   </table>
   <%= link_to 'New Meetup', new_user_event_path(params[:user_id]), class: 'btn btn-primary' %>
+
+  <button type="button" class="btn btn-md btn-primary" id="myBtn">New Meetup2</button>
+
+  <div id="user-modal" class="modal fade"></div>
+  <!-- Modal -->
+  <div class="modal fade" id="myModal" role="dialog">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <button type="button" class="close" data-dismiss="modal">&times;</button>
+
+        <%= form_for @event, url: {controller:'messages', action:'create'}, html: { multipart: true, class:"form-horizontal user" } do |f| %>
+
+          <div class="form-group">
+            <%= f.label "Location:", :class => 'control-label col-lg-2' %>
+              <%= f.text_field :location, class: 'form-control'%>
+              <br>
+              <%= f.text_area :description, class: 'form-control', rows: 10 %>
+              <%= f.text_field :user_id, value: current_user.id %>
+              <%= f.text_field :event_id, value: params[:format] %>
+          </div>
+
+          <div class="form-group">
+            <div class="col-lg-offset-2 col-lg-10">
+              <%= f.submit "Post", :class => 'btn btn-primary modal-close'%>
+            </div>
+          </div>
+        <% end %>
+      </div>
+
+    </div>
+  </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
 <% else %>
   <%= render 'map' %>
   <%= render '/messages/index' %>
