Fix date conversion in search js, styling for concert show with picture, mess with user show styling

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -62,9 +62,14 @@
    background-color: none;
  }
 
+ .dl-horizontal img {
+   margin-bottom: 10%;
+ }
+
 .logo-pic {
   float:left;
 }
+
 
  .concert-li-container {
    width: 100%;
