--- a/app/views/concerts/show.html.erb
+++ b/app/views/concerts/show.html.erb
@@ -1,18 +1,16 @@
 <%- model_class = Concert -%>
 <div class="page-header">
-  <h1><%=t '.title', :default => model_class.model_name.human.titleize %></h1>
 </div>
 
 <div class="concert-container">
   <dl class="dl-horizontal">
-    <dt></dt>
-    <dd><img src="<%= @concert.image%>"/></dd>
+    <img src="<%= @concert.image%>"/></dd>
     <dt><strong><%= model_class.human_attribute_name(:artist) %>:</strong></dt>
     <dd><%= @concert.artist %></dd>
     <dt><strong><%= model_class.human_attribute_name(:venue) %>:</strong></dt>
     <dd><%= @concert.venue %></dd>
     <dt><strong><%= model_class.human_attribute_name(:date) %>:</strong></dt>
-    <dd><%= @concert.date.strftime("%A, %b %d at %I %p") %></dd>
+    <dd><%= @concert.date%></dd>
   </dl>
 
   <div class="button-container">
