--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,8 +1,6 @@
 <%- model_class = User -%>
+    <h1> Hello, <%=@user.name%></h1>
 <div class="profile_page">
-  <div class="page-header">
-    <h1 class="hello_user"> Hello, <%=@user.name%></h1>
-  </div>
   <div class="profile_pic">
     <%= image_tag @user.image.url(:medium) %>
   </div>
