--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -61,7 +61,6 @@
   <div class="modal fade" id="myModal" role="dialog">
     <div class="modal-dialog">
       <div class="modal-content">
-        <button type="button" class="close" data-dismiss="modal">&times;</button>
 
         <%= form_for ([@user, @event]), :html => { :class => "form-horizontal event" } do |f| %>
 
@@ -97,14 +96,15 @@
             <%= f.label :description, :class => 'control-label col-lg-2'%>
             <div class="col-lg-10">
               <%= f.text_area :description, :class => 'form-control', rows: 10 %>
+              <%= f.text_field :carpool, value: false %>
+              <%= f.text_field :concert_id, value: params[:format] %>
             </div>
             <%=f.error_span(:description) %>
           </div>
           <div class="form-group">
             <div class="col-lg-offset-2 col-lg-10">
               <%= f.submit 'Submit', :class => 'btn btn-primary' %>
-              <%= link_to t('.cancel', :default => t("helpers.links.cancel")),
-                        user_events_path, :class => 'btn btn-default' %>
+              <button type="button" class="btn btn-md btn-primary" data-dismiss="modal">Cancel</button>
             </div>
           </div>
 
