--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -85,7 +85,9 @@
 
     </div>
   </div>
-
+  <footer class="fixed_footer">
+    <p>&copy; AmpedUp 2016</p>
+  </footer>
 
 
 
@@ -101,6 +103,10 @@
 <% else %>
   <%= render 'map' %>
   <%= render '/messages/index' %>
+
+  <footer class="footer">
+    <p>&copy; AmpedUp 2016</p>
+  </footer>
 <% end %>
 
 
