--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -47,5 +47,7 @@
                 user_events_path, :class => 'btn btn-default' %>
     </div>
   </div>
-
 <% end %>
+<footer class="fixed_footer">
+  <p>&copy; AmpedUp 2016</p>
+</footer>
