--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -67,9 +67,11 @@
           </div>
         </div>
         <% end %>
-        >>>>>>> a5efdb324e6ce9ea91778edad706ba145d9f1161
       </div>
     </div>
   </div>
 
   <%= render 'concerts/index' %>
+  <footer class="footer">
+    <p>&copy; AmpedUp 2016</p>
+  </footer>
