--- a/app/views/static/home.html.erb
+++ b/app/views/static/home.html.erb
@@ -100,9 +100,6 @@
 
               <%= link_to t('.cancel', :default => t("helpers.links.cancel")),
               login_path, :class => 'btn btn-default', "data-dismiss" => "modal" %>
-
-
-
             </div>
           </div>
           <% end %>
@@ -110,3 +107,6 @@
 
       </div>
     </div>
+    <footer class="footer">
+      <p>&copy; AmpedUp 2016</p>
+    </footer>
