--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,3 +1,4 @@
+<div class="event-index">
 <%- model_class = Event -%>
 
 <div class="page-header">
@@ -5,6 +6,7 @@
 </div>
 
 <% if params[:carpool] == "false" %>
+  <div class="table-container meetup-container">
   <table class="table">
     <thead>
             <th><%= model_class.human_attribute_name(:description) %></th>
@@ -56,6 +58,9 @@
   <%= link_to 'New Meetup', new_user_event_path(params[:user_id]), class: 'btn btn-primary' %>
 
   <button type="button" class="btn btn-md btn-primary" id="myBtn">New Meetup2</button>
+</div>
+</div>
+
 
   <div id="user-modal" class="modal fade"></div>
   <!-- Modal -->
@@ -85,28 +90,11 @@
 
     </div>
   </div>
-  <footer class="fixed_footer">
-    <p>&copy; AmpedUp 2016</p>
-  </footer>
-
-
-
-
-
-
-
-
-
-
 
 
 <% else %>
   <%= render 'map' %>
   <%= render '/messages/index' %>
-
-  <footer class="footer">
-    <p>&copy; AmpedUp 2016</p>
-  </footer>
 <% end %>
 
 
